<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="16dp">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            style="@style/Heading5"
            android:text="@string/limit_budget"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvDetailLimit"
            style="@style/Body2"
            android:text="@string/detail"
            android:textColor="@color/neutral_800"
            android:drawablePadding="4dp"
            android:padding="4dp"
            app:drawableEndCompat="@drawable/ic_drop_down" />
    </LinearLayout>

    <!-- Card -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_card_primary_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvSpentLabel"
                style="@style/Caption1"
                android:text="@string/spent"
                android:textColor="@color/neutral_800"
                android:layout_weight="1"
                android:layout_width="0dp"/>

            <TextView
                android:id="@+id/tvSpentRatio"
                style="@style/Body1"
                android:text="0/0"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbBudget"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:progressDrawable="@drawable/progress_rounded"/>
    </LinearLayout>
</LinearLayout>
